first commit on precious branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hi my name is precious</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In cum sequi quia repellendus repellat corporis quod architecto placeat dolor soluta! Id quasi consequuntur tenetur soluta suscipit! Culpa recusandae inventore nulla?</p>
+    
 </body>
 </html>
